<resources>
    <string name="app_name">Annictim</string>
    <string name="me_works">視聴状況</string>
    <string name="user">プロフィール</string>
    <string name="setting">設定</string>
    <string name="record">記録</string>
    <string name="search">検索</string>
    <string name="program">放送予定</string>

    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>

    <string name="cast">キャスト</string>
    <string name="staff">スタッフ</string>

    <string name="logout">ログアウト</string>
    <string name="logout_confirm">ログアウトしますか？</string>
    <string name="login_or_create">ログイン、新規登録</string>

    <string name="searching">検索する</string>

    <string name="current_season">今期</string>
    <string name="next_season">来期</string>
    <string name="previous_season">前期</string>

    <string name="feedback">フィードバック</string>

    <string name="watching">Watching</string>
    <string name="wanna_watch">Wanna watch</string>
    <string name="watched_count">Watched count</string>
    <string name="on_hold">On hold</string>
    <string name="stop_watching">Stop watching</string>

    <string name="movie">映像</string>
    <string name="music">音楽</string>
    <string name="story">ストーリー</string>
    <string name="character">キャラクター</string>
    <string name="overall">全体</string>

    <string name="to_creator_site">作者サイトへ</string>
    <string name="to_github">ソースコードを見る(GitHub)</string>
    <string name="license">ライセンス</string>

    <string name="home">Home</string>
    <string name="record_en">Record</string>
    <string name="program_en">Program</string>
    <string name="profile">Profile</string>

    <string name="character_name">(%s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_work_detail">WorkDetailActivity</string>
    <string name="network_error">ネットワークエラー</string>
    <string name="reconnect">再通信</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_user">UserActivity</string>

    <string-array name="season_list">
        <item>全体</item>
        <item>春</item>
        <item>夏</item>
        <item>秋</item>
        <item>冬</item>
    </string-array>

    <string-array name="status_list">
        <item>見たい</item>
        <item>見てる</item>
        <item>見た</item>
        <item>中断</item>
        <item>中止</item>
        <item>未選択</item>
    </string-array>

</resources>
