<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="java.lang.Integer" />
        <variable
            name="user"
            type="com.okysoft.annictim.infra.api.model.response.User"
            />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:showIn="@layout/activity_user"
                >

                <View
                    android:id="@+id/background"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/user_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadImage="@{user.avatarUrl}"
                    />

                <TextView
                    android:id="@+id/user_name"
                    android:text="@{user.name}"
                    android:textColor="@color/grey_600"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_image"
                    tools:text="name"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/watching_count"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_height"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/watching"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp"
                    android:text="@{Integer.toString(user.watchingCount)}"
                    tools:text="100"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include layout="@layout/border" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wanna_watch_count"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_height"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/wanna_watch"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp"
                    android:text="@{Integer.toString(user.wannaWatchCount)}"
                    tools:text="100"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include layout="@layout/border" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/watched_count"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_height"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/watched_count"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp"
                    android:text="@{Integer.toString(user.watchedCount)}"
                    tools:text="100"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include layout="@layout/border" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/on_hold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_height"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/on_hold"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp"
                    android:text="@{Integer.toString(user.onHoldCount)}"
                    tools:text="100"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include layout="@layout/border" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stop_watching"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_height"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/stop_watching"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp"
                    android:text="@{Integer.toString(user.stopWatchingCount)}"
                    tools:text="100"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>